Fixed overflow issues with particle background: Complete

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@500&family=Libre+Barcode+39&family=Monofett&family=Monoton&family=Permanent+Marker&family=Press+Start+2P&family=Rubik+Vinyl&family=Tourney:ital,wght@0,400;1,100;1,400;1,700&display=swap");
 
 html,
-body {
+body{
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 	background-color: black;
-	/* overflow-x: hidden; */
-	/* z-index: 0; */
 }
+
+
 
 .App {
 	display: flex;
@@ -19,26 +19,19 @@ body {
 }
 
 .container {
-	/* background: -webkit-linear-gradient(to right, #2c5364, #203a43, #0f2027);
-  background: linear-gradient(to right, #2c5364, #203a43, #0f2027); */
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	padding: clamp(1.5rem, 9%, 4rem);
-	height: 100vh;
+	min-height: 100vh;
 	z-index: 1;
 }
 
 #tsparticles {
-  overflow: hidden;
+	overflow: hidden;
 	position: fixed;
-  /* display: grid; */
-  /* top: 0; */
-  left: 0;
-  /* bottom: 0; */
-  right: 0;
-  /* justify-content: center; */
-  /* align-self: center; */
+	left: 0;
+	right: 0;
 	height: 100%;
 	width: 1440px;
 	z-index: 0;
