--- a/src/components/styles/Cv.module.css
+++ b/src/components/styles/Cv.module.css
@@ -1,14 +1,20 @@
 
 .container {
-width: 90%;
-height: 100%;
 background-color: black;
-padding: 25px;
+	border-radius: 15px;
+	height: 100%;
+	border: solid 3px green;
+	width:65%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .image_container {
    display: flex;
    justify-content: center;
+   	width:65%;
+      margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (max-width: 700px){
