--- a/src/components/styles/Footer.module.css
+++ b/src/components/styles/Footer.module.css
@@ -1,7 +1,8 @@
-.footer {
-  position:relative;
-  bottom: 0;
+.footer {  
+
+ 
   text-decoration: none;
+
   z-index: 1;
 }
 
