--- a/src/components/styles/NavBar.module.css
+++ b/src/components/styles/NavBar.module.css
@@ -8,7 +8,7 @@
 	} */
 
 	.icon_bar {
-		position: fixed;
+		position: absolute;
 		top: 0;
 		width: 100%;
 		background: rgba(0, 0, 0, 0.5);
