--- a/src/components/styles/ProjectsSlider.module.css
+++ b/src/components/styles/ProjectsSlider.module.css
@@ -1,4 +1,16 @@
+.container {
+	position: relative;
+	display: grid;
+	place-content: center;
+	margin:  auto;
+	/* height: 100%; */
+	z-index: 1;
+	padding: 0;
+}
+
+
 .main {
+	
 	background: rgba(0, 0, 0, 0.4);
 	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 	backdrop-filter: blur(8.1px);
@@ -6,7 +18,7 @@
 	border: 1px solid rgba(0, 0, 0, 0.15);
 	padding: clamp(0.55rem, 3%, 1.5rem);
 	border-radius: 15px;
-	/* z-index: 1; */
+	height: 100%;
 }
 
 .header {
