--- a/src/components/styles/Slider.module.css
+++ b/src/components/styles/Slider.module.css
@@ -1,9 +1,9 @@
 .carousel {
-
 	height: 400px;
 	width: 90%;
     object-fit: contain;
 	margin: auto;
+	z-index: 1;
 }
 
 .swiper_slide {
@@ -15,6 +15,6 @@
 
 @media screen and (max-width: 600px) {
 	.carousel {
-		height: 300px;
+		/* height: 300px; */
 	}
 }
